<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPrevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/arrow_left"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textMonthYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="Srpen 2026" />

        <Button
            android:id="@+id/buttonNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/arrow_right"
            android:textColor="@color/black" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/weekdayHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="7" />

    <GridLayout
        android:id="@+id/dayGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:columnCount="7" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <ListView
            android:id="@+id/listHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/black"
            android:dividerHeight="1dp" />

        <TextView
            android:id="@+id/textHistoryEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_empty"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>
